crates/reap-order/tests/ui/no_raw_regular_gateway.stderr
error[E0432]: unresolved import `reap_order::OkxGatewayIo`
 --> tests/ui/no_raw_regular_gateway.rs:2:18
  |
2 | use reap_order::{OkxGatewayIo, OkxOrderGateway, PrivateStateReducer, RegularExecution};
  |                  ^^^^^^^^^^^^ no `OkxGatewayIo` in the root

error[E0308]: mismatched types
  --> tests/ui/no_raw_regular_gateway.rs:11:40
   |
11 |     let _ = gateway.submit("decision", order.clone()).await;
   |                     ------             ^^^^^^^^^^^^^ expected `ReservedRegularSubmit`, found `NewOrder`
   |                     |
   |                     arguments to this method are incorrect
   |
note: method defined here
  --> src/gateway.rs
   |
   |     pub async fn submit(
   |                  ^^^^^^

error[E0308]: mismatched types
  --> tests/ui/no_raw_regular_gateway.rs:13:40
   |
13 |         .submit_registered("decision", order.clone(), state)
   |          -----------------             ^^^^^^^^^^^^^ expected `ReservedRegularSubmit`, found `NewOrder`
   |          |
   |          arguments to this method are incorrect
   |
note: method defined here
  --> src/gateway.rs
   |
   |     pub async fn submit_registered(
   |                  ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/no_raw_regular_gateway.rs:15:48
   |
15 |     let _ = gateway.prepare_submit("decision", order.clone());
   |                     --------------             ^^^^^^^^^^^^^ expected `ReservedRegularSubmit`, found `NewOrder`
   |                     |
   |                     arguments to this method are incorrect
   |
note: method defined here
  --> src/gateway.rs
   |
   |     pub fn prepare_submit(
   |            ^^^^^^^^^^^^^^

error[E0599]: no method named `prepare_registered_submit` found for mutable reference `&mut OkxOrderGateway` in the current scope
  --> tests/ui/no_raw_regular_gateway.rs:16:21
   |
16 |     let _ = gateway.prepare_registered_submit("decision", order, "client-1");
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: there is a method `prepare_submit` with a similar name, but with different arguments
  --> src/gateway.rs
   |
   | /     pub fn prepare_submit(
   | |         &mut self,
   | |         idempotency_key: impl Into<String>,
   | |         approved: ReservedRegularSubmit,
   | |     ) -> Result<SubmitPreparation, GatewayError> {
   | |________________________________________________^

error[E0061]: this method takes 1 argument but 3 arguments were supplied
  --> tests/ui/no_raw_regular_gateway.rs:18:10
   |
18 |         .cancel("BTC-USDT", None, Some("client-1".to_string()))
   |          ^^^^^^ ----------  ----  ---------------------------- unexpected argument #3 of type `std::option::Option<String>`
   |                 |           |
   |                 |           unexpected argument #2 of type `std::option::Option<_>`
   |                 expected `ApprovedRegularCancel`, found `&str`
   |
note: method defined here
  --> src/gateway.rs
   |
   |     pub async fn cancel(
   |                  ^^^^^^
help: remove the extra arguments
   |
18 -         .cancel("BTC-USDT", None, Some("client-1".to_string()))
18 +         .cancel(/* ApprovedRegularCancel */)
   |

error[E0308]: mismatched types
  --> tests/ui/no_raw_regular_gateway.rs:23:36
   |
23 |       let _ = gateway.prepare_cancel((
   |  _____________________--------------_^
   | |                     |
   | |                     arguments to this method are incorrect
24 | |         "account".to_string(),
25 | |         "BTC-USDT".to_string(),
26 | |         "client-1".to_string(),
27 | |         "reason".to_string(),
28 | |     ));
   | |_____^ expected `ApprovedRegularCancel`, found `(String, String, String, String)`
   |
   = note: expected struct `ApprovedRegularCancel`
               found tuple `(String, String, String, String)`
note: method defined here
  --> src/gateway.rs
   |
   |     pub fn prepare_cancel(
   |            ^^^^^^^^^^^^^^

error[E0599]: no method named `set_order_transport` found for mutable reference `&mut OkxOrderGateway` in the current scope
  --> tests/ui/no_raw_regular_gateway.rs:37:21
   |
37 |     let _ = gateway.set_order_transport(Box::new(()));
   |                     ^^^^^^^^^^^^^^^^^^^ method not found in `&mut OkxOrderGateway`

error[E0308]: mismatched types
  --> tests/ui/no_raw_regular_gateway.rs:38:62
   |
38 |     let _ = RegularExecution::place_regular_order(execution, place);
   |             -------------------------------------            ^^^^^ expected `PreparedRegularSubmit`, found `&OkxPlaceOrder`
   |             |
   |             arguments to this function are incorrect
   |
note: method defined here
  --> src/gateway.rs
   |
   |     async fn place_regular_order(
   |              ^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/no_raw_regular_gateway.rs:39:63
   |
39 |     let _ = RegularExecution::cancel_regular_order(execution, cancel);
   |             --------------------------------------            ^^^^^^ expected `PreparedRegularCancel`, found `&OkxCancelOrder`
   |             |
   |             arguments to this function are incorrect
   |
note: method defined here
  --> src/gateway.rs
   |
   |     async fn cancel_regular_order(
   |              ^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/no_raw_regular_gateway.rs:40:72
   |
40 |     let _ = RegularExecution::cancel_regular_order_via_rest(execution, cancel);
   |             -----------------------------------------------            ^^^^^^ expected `PreparedRegularCancel`, found `&OkxCancelOrder`
   |             |
   |             arguments to this function are incorrect
   |
note: method defined here
  --> src/gateway.rs
   |
   |     async fn cancel_regular_order_via_rest(
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
